--- a/src/Gemfile
+++ b/src/Gemfile
@@ -31,26 +31,63 @@ gem 'bootsnap', '>= 1.4.4', require: false
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'capybara', '>= 2.15'
+  gem 'factory_bot_rails'
+  gem 'faker', "~> 2.8"
+  gem 'pry-rails'
+  gem 'rails-controller-testing'
+  gem 'rspec-rails'
+  gem 'rspec_junit_formatter'
+  gem 'bullet'
 end
 
 group :development do
   # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
   gem 'web-console', '>= 4.1.0'
+  gem 'better_errors'
+  gem 'binding_of_caller'
+  gem 'rubocop', require: false
   # Display performance information such as SQL time and flame graphs for each request in your browser.
   # Can be configured to work on production as well see: https://github.com/MiniProfiler/rack-mini-profiler/blob/master/README.md
   gem 'rack-mini-profiler', '~> 2.0'
   gem 'listen', '~> 3.3'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+  gem 'spring-watcher-listen', '~> 2.0.0'
 end
 
 group :test do
   # Adds support for Capybara system testing and selenium driver
-  gem 'capybara', '>= 3.26'
+  
   gem 'selenium-webdriver'
   # Easy installation and use of web drivers to run system tests with browsers
   gem 'webdrivers'
 end
+
+#ログイン機能
+gem 'devise'
+#ページネーション
+gem 'kaminari', '~> 1.2.1'
+#画像投稿機能
+gem 'carrierwave'
+gem 'carrierwave-aws'
+#bootstrap導入
+gem 'bootstrap-sass'
+#jquery導入
+gem 'jquery-rails'
+gem 'jquery-ui-rails'
+#haml導入
+gem 'haml-rails'
+gem 'erb2haml'
+#JS変数使用可能
+gem 'gon'
+#マークダウン
+gem 'redcarpet'
+
+#画像リサイズ
+gem 'mini_magick'
+#タグ機能
+gem 'acts-as-taggable-on'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
